--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,3 +8,5 @@ edition = "2021"
 [dependencies]
 env_logger = "0.10.0"
 log = "0.4.20"
+actix-web = "4"
+serde = { version = "1.0.193", features = ["derive"] }
